# patchwork-plusplus

./: .clang-format  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  USAGE.md  default_params.txt  interactive_tuning_guide.md  output_boundary_gridmap.yaml  patchwork_gridmap_logic.md
.github/workflows/: cpp.yml  pre-commit.yml  pypi.yml  python.yml  ros.yml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: ListPrepend.cmake  pybind11.cmake
cpp/common/: CMakeLists.txt
cpp/common/include/patchwork/: plane_fit.h  types.h
cpp/common/src/: plane_fit.cpp
cpp/example_of_find_package/: CMakeLists.txt  README.md  demo_visualize_copied.cpp
cpp/patchwork/: CMakeLists.txt
cpp/patchwork/include/patchwork/: patchwork.h
cpp/patchwork/src/: patchwork.cpp
cpp/patchwork/tests/: smoke_test.cpp
cpp/patchworkpp/: CMakeLists.txt
cpp/patchworkpp/examples/: demo_interactive_tuning.cpp  demo_sequential.cpp  demo_visualize.cpp  demo_visualize_single_pcd.cpp
cpp/patchworkpp/include/patchwork/: patchworkpp.h
cpp/patchworkpp/src/: patchworkpp.cpp
docs/superpowers/plans/: 2026-05-09-patchwork-classic.md
docs/superpowers/specs/: 2026-05-09-add-patchwork-classic-algorithm-design.md
python/: CMakeLists.txt  README.md  pyproject.toml
python/examples/: aggregate_original_patchwork.py  bench_hz.py  compare_patchwork.py  demo_sequential.py  demo_visualize.py  evaluate_ransac_in_semantickitti.py  evaluate_semantickitti.py
python/patchworkpp/: pybinding.cpp
python/tests/: test_patchwork_smoke.py  test_smoke.py
ros/: CMakeLists.txt  README.md
ros/launch/: patchworkpp.launch.py
ros/src/: GroundSegmentationServer.cpp  GroundSegmentationServer.hpp  Utils.hpp
scripts/: full_aligned_gridmap.pgm  full_aligned_gridmap.yaml  img_to_pgm.py  run_original_patchwork.sh
